manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nodejs-sample-app
  name: nodejs-sample-app
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: nodejs-sample-app
  type: ClusterIP
status:
  loadBalancer: {}
