manifest/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: techawesome
    namespace: default
  spec:
    ingressClassName: nginx
    rules:
      - host:  techawesome.in
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: nodejs-sample-app
                  port:
                    number: 3000
              path: /
